[gd_scene load_steps=2 format=3 uid="uid://dhifxmsp5vqmr"]

[ext_resource type="Script" path="res://Scenes/ShakeCam/shake_cam.gd" id="1_qplup"]

[node name="ShakeCam" type="Camera2D"]
script = ExtResource("1_qplup")

[node name="ShakeTime" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="ShakeTime" to="." method="_on_shake_time_timeout"]
